# QCBOR

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.common  Makefile.gcc  Makefile.gcc8  Makefile.ossl  Makefile.psa  Makefile.psa_off_target  Makefile.test  README.md  SECURITY.md  TRY SPIFFY DECODE.md  Tagging.md  basic_test.c  basic_test.h  cmd_line_main.c  code_size_check.c  code_size_check.h  encode_sample.c  example.c  example.h  main.c  min_use_main.c  not_well_formed_cbor.h  qcbor.spec  qcbor_config 2.h  qcbor_decode_malloc.c  qcbor_decode_map.c  run_tests.c  run_tests.h  tag-examples.c  tag-examples.h  ub-example.c  ub-example.h  vcpkg.json  vcpkg_psa.json
.github/workflows/: ci.yml  vcpkg.json
.tito/: tito.props
QCBOR.xcodeproj/: project.pbxproj
QCBOR.xcodeproj/project.xcworkspace/xcuserdata/lgl.xcuserdatad/: UserInterfaceState.xcuserstate
cmake/: QCBORConfig.cmake  QCBORTargets.cmake  qcborConfig.cmake.in
crypto_adapters/: t_cose_b_con_hash.c  t_cose_hash_fail_crypto.c  t_cose_openssl_crypto.c  t_cose_openssl_signature.c  t_cose_psa_crypto.c  t_cose_psa_crypto.h  t_cose_psa_crypto_hash.c  t_cose_psa_crypto_sign.c  t_cose_psa_crypto_verify.c  t_cose_test_crypto.c  t_cose_test_crypto.h
crypto_adapters/psa_off_target_crypto/: t_cose_psa_off_target_hashes.c  t_cose_psa_off_target_signature.c  tfm_memory_utils.h
doc/: Building.md  Numbers.md  Overview.md  Serialization.md  Tagging.md  mainpage.dox
doxygen/: Doxyfile  t_cose_doxyfile
encode_sample/: main.c
examples/: encryption_examples.c  encryption_examples.h  encryption_examples_ossl.c  encryption_examples_ossl.h  example_keys.c  example_keys.h  examples_main.c  init_keys.h  init_keys_ossl.c  init_keys_psa.c  init_keys_test.c  print_buf.c  print_buf.h  rsa_test_key.h  signing_examples.c  signing_examples.h  t_cose_basic_example_ossl.c  t_cose_basic_example_psa.c  t_cose_encryption_example_psa.c
examples/keys/: cose_ex_P_256_pair.der  cose_ex_P_256_pub.der  cose_ex_P_521_pair.der  cose_ex_P_521_pub.der
inc/: UsefulBuf.h  q.h  q_useful_buf.h  qcbor.h  t_cose_common.h  t_cose_message.h  t_cose_recipient_enc.h  t_cose_sign1_sign.h  t_cose_sign1_verify.h
inc/qcbor/: UsefulBuf.h  qcbor.h  qcbor2_encode.h  qcbor_common.h  qcbor_decode.h  qcbor_decode_map.h  qcbor_encode.h  qcbor_main_decode.h  qcbor_main_encode.h  qcbor_number_decode.h  qcbor_number_encode.h  qcbor_private.h  qcbor_spiffy_decode.h  qcbor_tag_decode.h  qcbor_tag_encode.h
inc/t_cose/: q_useful_buf.h  t_cose_common.h  t_cose_encrypt_dec.h  t_cose_encrypt_enc.h  t_cose_key.h  t_cose_mac_compute.h  t_cose_mac_validate.h  t_cose_parameters.h  t_cose_recipient_dec.h  t_cose_recipient_dec_aes_kw.h  t_cose_recipient_dec_esdh.h  t_cose_recipient_dec_hpke.h  t_cose_recipient_dec_keywrap.h  t_cose_recipient_enc.h  t_cose_recipient_enc_aes_kw.h  t_cose_recipient_enc_esdh.h  t_cose_recipient_enc_hpke.h  t_cose_recipient_enc_keywrap.h  t_cose_sign1_sign.h  t_cose_sign1_verify.h  t_cose_sign_sign.h  t_cose_sign_verify.h  t_cose_signature_main.h  t_cose_signature_sign.h  t_cose_signature_sign_ecdsa.h  t_cose_signature_sign_eddsa.h  t_cose_signature_sign_main.h  t_cose_signature_sign_restart.h  t_cose_signature_sign_short.h  t_cose_signature_verify.h  t_cose_signature_verify_ecdsa.h  t_cose_signature_verify_eddsa.h  t_cose_signature_verify_main.h  t_cose_signature_verify_short.h  t_cose_standard_constants.h
pkg/: qcbor.spec
qdv/: b.sh
src/: UsefulBuf.c  decode_nesting.h  decode_private.h  hpke.c  hpke.h  ieee754.c  ieee754.h  qcbor_config.h  qcbor_decode.c  qcbor_decode_malloc.c  qcbor_decode_merge_fail.c  qcbor_encode.c  qcbor_err_to_str.c  qcbor_main_decode.c  qcbor_main_encode.c  qcbor_number_decode.c  qcbor_number_encode.c  qcbor_spiffy_decode.c  qcbor_tag_decode.c  qcbor_util.c  qcbor_util.h  t_cose_crypto.h  t_cose_defines.h  t_cose_encrypt_dec.c  t_cose_encrypt_enc.c  t_cose_headers.c  t_cose_headers.h  t_cose_key.c  t_cose_mac_compute.c  t_cose_mac_validate.c  t_cose_parameters.c  t_cose_parameters.h  t_cose_qcbor_gap.c  t_cose_qcbor_gap.h  t_cose_recipient_dec_aes_kw.c  t_cose_recipient_dec_esdh.c  t_cose_recipient_dec_hpke.c  t_cose_recipient_dec_hpke2.c  t_cose_recipient_dec_keywrap.c  t_cose_recipient_enc_aes_kw.c  (+20 more)
t_cose.xcodeproj/: project.pbxproj
t_cose.xcworkspace/: contents.xcworkspacedata
test/: CMakeLists.txt  UsefulBuf_Tests.c  UsefulBuf_Tests.h  basic_test.c  basic_test.h  bstrwrap_tests.c  bstrwrap_tests.h  float_tests.c  float_tests.h  half_precision_test.c  half_precision_test.h  half_to_double_from_rfc7049.c  half_to_double_from_rfc7049.h  mempool_test.c  mempool_test.h  not_well_formed_cbor.h  qcbor_decode_malloc_tests.c  qcbor_decode_malloc_tests.h  qcbor_decode_tests.c  qcbor_decode_tests.h  qcbor_encode_tests.c  qcbor_encode_tests.h  run_tests.c  run_tests.h  t_cose_compute_validate_mac_test.c  t_cose_compute_validate_mac_test.h  t_cose_crypto_test.c  t_cose_crypto_test.h  t_cose_encrypt_decrypt_test.c  t_cose_encrypt_decrypt_test.h  t_cose_hash_fail_test.c  t_cose_hash_fail_test.h  t_cose_make_openssl_test_key.c  t_cose_make_psa_test_key.c  t_cose_make_test_messages.c  t_cose_make_test_messages.h  t_cose_make_test_pub_key.h  t_cose_make_test_test_key.c  t_cose_make_test_tokens.c  t_cose_make_test_tokens.h  (+8 more)
test/data/: aead_in_error.diag  cose_encrypt_a128cbc_a128kw.diag  cose_encrypt_a128ctr_a128kw.diag  cose_encrypt_bad_alg.diag  cose_encrypt_bad_hdrs.diag  cose_encrypt_bad_iv.diag  cose_encrypt_crit.diag  cose_encrypt_junk_recipient.diag  cose_encrypt_p256_wrap_128.diag  cose_encrypt_p256_wrap_aescbc.diag  cose_encrypt_p256_wrap_aesctr.diag  cose_encrypt_wrong_array.diag  cose_encrypt_wrong_extra.diag  cose_encrypt_wrong_rcpt_array.diag  cose_recipients_map_instead_of_array.diag  hmac_big_head.diag  hmac_error_header.diag  make_test_messages.sh  no_tag.diag  test_messages.c  test_messages.h  tstr_ciphertext.diag  unknown_rcpt_alg.diag  unknown_symmetric_alg.diag  unprot_headers_wrong_type.diag  wrong_tag.diag
